--- a/LoLPlay/LoLPlay/LoLPlay.csproj
+++ b/LoLPlay/LoLPlay/LoLPlay.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.2.0" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
